Edit to README.md to show my final comments,  Edits to Google.html to make all anchors clickable,  Edit to css to correctly align all elements my code is still really sloppy

--- a/Google.css
+++ b/Google.css
@@ -2,6 +2,7 @@
     float: left;
     padding-left: 30px;
     padding-top: 10px;
+    font-size: 12px;
 }
 .about{
     margin-right: 30px;
@@ -9,6 +10,7 @@
 .top_right{
     float: right;
     padding-right:30px;
+    font-size: 12px;
 }
 
 .Gmail{
@@ -39,7 +41,9 @@
     padding-top: 10px;
 }
 
-
+.container{
+    text-align: center;
+}
 
 .big{
     padding-top: 200px;
@@ -60,8 +64,7 @@
 }
 
 .submit{
-    padding-left: 625px; 
-
+  text-align: center;
 }
 
 .buttons{
@@ -69,6 +72,8 @@
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
+    
+    
 
 }
 
@@ -77,6 +82,7 @@ footer {
     bottom:0;
     width:100%;
     height:50px;  
+    border-top: .5px solid gray;
  }
 
  body {
@@ -88,9 +94,35 @@ footer {
  .bottom_left{
     display: block;
     float:left;
+    font-size: 12px;
+    margin-top: 20px;
  }
 
  .bottom_right{
      display: block;
      float:right;
+     font-size: 12px;
+     margin-top: 20px;
  }
+
+ .ad{
+     margin-right: 30px;
+     margin-left: 30px;
+ }
+
+.privacy{
+    margin-right: 30px;
+}
+
+.terms{
+    margin-right: 30px;
+}
+
+.settings{
+    margin-right: 30px;
+}
+
+a{
+    color: black;
+    text-decoration: none;
+}
